simple examples on ggml tensor library

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,10 +18,11 @@ add_library(common-ggml STATIC common-ggml.cpp)
 target_link_libraries(common-ggml PRIVATE ggml)
 target_include_directories(common-ggml PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_subdirectory(gpt-2)
-add_subdirectory(gpt-j)
+#add_subdirectory(gpt-2)
+#add_subdirectory(gpt-j)
 add_subdirectory(mnist)
-add_subdirectory(sam)
-add_subdirectory(yolo)
+#add_subdirectory(sam)
+#add_subdirectory(yolo)
 add_subdirectory(simple)
-add_subdirectory(magika)
+#add_subdirectory(magika)
+add_subdirectory(tensor_operations)
