projector good without masking

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(mnist)
 add_subdirectory(simple)
 #add_subdirectory(magika)
 add_subdirectory(tensor_operations)
+add_subdirectory(projectors)
