--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ examples/projectors/projector-f32.gguf
 examples/projectors/test_data/*
 examples/projectors/torch_input.pt
 examples/projectors/ggml_input.gguf
+examples/projectors/vision_attn_masks.gguf
